# shuyuan-ai

./: AGENTS.md  LICENSE  README.md  alembic.ini  pyproject.toml
agents/archive/: SOUL.md
agents/budget_office/: SOUL.md
agents/cardinal/: SOUL.md
agents/censorate/: SOUL.md
agents/menxia/: SOUL.md
agents/ministries/bingbu/: SOUL.md
agents/ministries/gongbu/: SOUL.md
agents/ministries/hubu/: SOUL.md
agents/ministries/libu/: SOUL.md
agents/ministries/libu_hr/: SOUL.md
agents/ministries/xingbu/: SOUL.md
agents/round_table/: SOUL.md
agents/round_table/roles/: adversary.md  guardian.md  proposer.md  synthesizer.md
agents/shangshu/: SOUL.md
agents/zhongshu/: SOUL.md
alembic/: env.py
alembic/versions/: 20260307_000001_baseline_governance_ledger.py  20260307_000002_add_receipt_idempotency_key.py  20260307_000003_add_knowledge_archive.py  20260307_000004_add_runtime_lineage.py
apps/: __init__.py
apps/api/: __init__.py  main.py
apps/api/shuyuan_core/: __init__.py  api.py  app.py  archive.py  audit_runner.py  challenge_runner.py  config.py  coordination.py  db.py  enums.py  envelope.py  evolve.py  extractors.py  migrations.py  models.py  object_store.py  openclaw_adapter.py  roundtable_runner.py  routing.py  service.py  store.py
apps/api/tests/: conftest.py  test_api_schemas.py  test_archive.py  test_audit_runner.py  test_challenge_runner.py  test_coordination.py  (+15 more)
apps/console/: package.json
docs/: 1.0.md  2.0.md  README.md  v2.0-detail.md  v2.0-extractors.md  v2.0-schema.md
infra/docker/: Dockerfile.api  docker-compose.yml
(+10 files in other folders)
