[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shuyuan-governance-core"
version = "0.1.0"
description = "ShuYuanAI v2.0 governance-first contract kernel"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "asyncpg>=0.30.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "httpx>=0.28.0"
]

[tool.pytest.ini_options]
testpaths = ["apps/api/tests"]
asyncio_default_fixture_loop_scope = "function"
asyncio_mode = "auto"
markers = [
  "postgres_integration: requires a reachable PostgreSQL instance"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
